[package]
name = "things-to-check"
version = "0.1.0+evergreen"
repository = "https://github.com/ojacobson/things-to-check/"
publish = false
authors = ["Owen Jacobson <owen@grimoire.ca>"]
homepage = "https://things-to-check.herokuapp.com/"
edition = "2021"

[badges.travis-ci]
project = "ojacobson/things-to-check"
branch = "main"

[dependencies]
actix-web = "3.3.3"
pulldown-cmark = "0.7"
rand = "0.7"
serde = "1.0"
serde_urlencoded = "0.6"
serde_yaml = "0.8"
thiserror = "1.0"
url = "2.1"
maud = { version = "0.23.0", features = ["actix-web"] }
actix-rt = "1.1.1"

[dev-dependencies]
lazy_static = "~1.4"
proptest = "1.0.0"
proptest-derive = "0.3.0"

[features]
