[package]
name = "things-to-check"
version = "0.1.0+evergreen"
repository = "https://github.com/ojacobson/things-to-check/"
publish = false
authors = ["Owen Jacobson <owen@grimoire.ca>"]
homepage = "https://things-to-check.herokuapp.com/"
edition = "2021"

[badges.travis-ci]
project = "ojacobson/things-to-check"
branch = "main"

[dependencies]
pulldown-cmark = "0.9.1"
rand = "0.8.5"
serde = "1.0.137"
serde_urlencoded = "0.7.1"
serde_yaml = "0.8.24"
thiserror = "1.0.31"
url = "2.2.2"
actix-web = "4.0.1"
askama = { version = "0.11.1", features = ["with-actix-web"] }
askama_actix = "0.13.0"

[dev-dependencies]
lazy_static = "1.4.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"

[features]
